Swagger clocks ok
